# XCFont

./: .gitignore  LICENSE  README.md
CustomFontDemo/: ContentView.swift  Convenient.swift  CustomFontDemoApp.swift  Info.plist
CustomFontDemo.xcodeproj/: project.pbxproj
CustomFontDemo/Fonts/xcfont_out/: FontName.swift  plist.xml
xcfont/: README.rst  pyproject.toml
xcfont/tests/: test_xcfont.py
xcfont/xcfont/: cli.py
