[tool.poetry]
name = "xcfont"
version = "0.1.0"
description = ""
authors = ["son.le <anhsonleit@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
click = "^8.0.1"
funcy = "^1.16"
fonttools = "^4.24.4"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
